[FIXME] add dummy device driver
- The #dummy device can be used as a starting point for a new device. It
contains bootstrap code for a bare-bone device driver.
- Adds kernel config option CONFIG_DEVDUMMY (=n by default)

Signed-off-by: Aditya Basu <mitthu@google.com>

--- a/kern/drivers/dev/Kbuild
+++ b/kern/drivers/dev/Kbuild
@@ -22,3 +22,4 @@ obj-y						+= srv.o
 obj-y						+= tmpfs.o
 obj-y						+= version.o
 obj-$(CONFIG_DEVVARS)				+= vars.o
+obj-$(CONFIG_DEVDUMMY)				+= dummy.o
