--- a/kern/drivers/dev/Kbuild
+++ b/kern/drivers/dev/Kbuild
@@ -15,9 +15,9 @@ obj-y						+= pipe.o
 obj-y						+= proc.o
 obj-y						+= random.o
 obj-$(CONFIG_REGRESS)				+= regress.o
-obj-y						+= sd.o
-obj-y						+= sdscsi.o
-obj-y						+= sdiahci.o
+obj-n						+= sd.o
+obj-n						+= sdscsi.o
+obj-n						+= sdiahci.o
 obj-y						+= srv.o
 obj-y						+= tmpfs.o
 obj-y						+= version.o
